syntax = "proto3";

package mail;

option go_package = "github.com/conveer/conveer/services/mail-service/proto";

// MailService provides mail account management
service MailService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc GetAccount(GetAccountRequest) returns (Account);
  rpc ListAccounts(ListAccountsRequest) returns (AccountList);
  rpc UpdateAccountStatus(UpdateAccountStatusRequest) returns (UpdateAccountStatusResponse);
  rpc RetryRegistration(RetryRegistrationRequest) returns (RetryRegistrationResponse);
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc GetStatistics(GetStatisticsRequest) returns (Statistics);
}

// CreateAccountRequest represents a request to create an account
message CreateAccountRequest {
  string first_name = 1;
  string last_name = 2;
  string birth_date = 3;
  string gender = 4;
  string preferred_country = 5;
  bool use_phone_verification = 6;
  string custom_email_prefix = 7;
}

// CreateAccountResponse represents the response to account creation
message CreateAccountResponse {
  bool success = 1;
  string account_id = 2;
  string status = 3;
  string error_message = 4;
}

// GetAccountRequest represents a request to get an account
message GetAccountRequest {
  string account_id = 1;
}

// Account represents a mail account
message Account {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string birth_date = 5;
  string gender = 6;
  string status = 7;
  string phone = 8;
  int64 created_at = 9;
  int64 updated_at = 10;
  string error_message = 11;
  int32 retry_count = 12;
}

// ListAccountsRequest represents a request to list accounts
message ListAccountsRequest {
  string status = 1;
  int32 limit = 2;
  int32 offset = 3;
}

// AccountList represents a list of accounts
message AccountList {
  repeated Account accounts = 1;
  int64 total = 2;
}

// UpdateAccountStatusRequest represents a request to update account status
message UpdateAccountStatusRequest {
  string account_id = 1;
  string status = 2;
  string error_message = 3;
}

// UpdateAccountStatusResponse represents the response to status update
message UpdateAccountStatusResponse {
  bool success = 1;
}

// RetryRegistrationRequest represents a request to retry registration
message RetryRegistrationRequest {
  string account_id = 1;
}

// RetryRegistrationResponse represents the response to retry request
message RetryRegistrationResponse {
  bool success = 1;
}

// DeleteAccountRequest represents a request to delete an account
message DeleteAccountRequest {
  string account_id = 1;
}

// DeleteAccountResponse represents the response to delete request
message DeleteAccountResponse {
  bool success = 1;
}

// GetStatisticsRequest represents a request to get statistics
message GetStatisticsRequest {}

// Statistics represents service statistics
message Statistics {
  int64 total_accounts = 1;
  map<string, int64> accounts_by_status = 2;
  float success_rate = 3;
  float average_retries = 4;
  int64 last_hour = 5;
  int64 last_24_hours = 6;
}
